--- a/DatiInterfOracleSpatial/GeoDataMap.html
+++ b/DatiInterfOracleSpatial/GeoDataMap.html
@@ -33,7 +33,8 @@
 <body>
     <div id="map" style="width:100%;height:100%;"></div>
     <!-- Spinner overlay -->
-    <div id="map-loading-spinner" style="display:none; position:fixed; left:0; top:0; width:100vw; height:100vh; background:rgba(0,0,0,0.18); z-index:9999; align-items:center; justify-content:center;">
+    <div id="map-loading-spinner"
+         style="display:none; position:fixed; left:0; top:0; width:100vw; height:100vh; background:rgba(0,0,0,0.18); z-index:9999; flex-direction:column; align-items:center; justify-content:center;">
         <div style="background:rgba(255,255,255,0.9); border-radius:12px; padding:24px 32px; box-shadow:0 2px 12px #0002; display:flex; flex-direction:column; align-items:center;">
             <div class="lds-dual-ring"></div>
             <div style="margin-top:12px; color:#333; font-size:1.1em;">Caricamento dati...</div>
